python/testData/inspections/RemoveUnicodePrefixFromGluedStringNodesInParenthesis.py
s = (<error descr="Python version 3.2 does not support a 'U' prefix">u<caret></error>"string \n"
    <error descr="Python version 3.2 does not support a 'U' prefix">u</error>"next line"
)